--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* ============================================
-   METALFORCE – AÇIK / FERAH KURUMSAL TEMA
+   METALFORCE – AÇIK / FERAH KURUMSAL TEMAssss
    ============================================ */
 
 :root {
